@@ -11,14 +11,28 @@ type CheckHandler interface {
 	Build() *CheckData
 }
 
+// CheckEntry is a named CheckHandler entry.
 type CheckEntry struct {
 	Name    string
 	Handler func() CheckHandler
 }
 
-// generic key/value storage type
+// Argument is a generic key/value storage type.
 type Argument struct {
 	key   string
 	value string
 	raw   string
+}
+
+// ArgumentList is a list of Argument objects.
+type ArgumentList []Argument
+
+// return list of raw values as list of strings.
+func (al ArgumentList) RawList() []string {
+	rawList := make([]string, 0, len(al))
+	for _, arg := range al {
+		rawList = append(rawList, arg.raw)
+	}
+
+	return rawList
 }
