@@ -260,6 +260,8 @@ func startBackgroundDaemon(t *testing.T) {
 		})
 		require.NotNilf(t, res, "got daemon result") //nolint:testifylint // assertions outside of main goroutine secured by channel
 		t.Logf("daemon finished")
+		assert.NotContainsf(t, res.Stdout, "[Error]", "log does not contain errors")
+		assert.NotContainsf(t, res.Stderr, "[Error]", "log does not contain errors")
 		daemonFinChan <- true
 	}()
 
