@@ -6,10 +6,12 @@ next:
          - update windows exporter to 0.30.5
          - update node exporter to 1.9.1
          - check_dns: fix crash without any nameserver
-         - fix timeout race condition when rebooting windows service
          - change handling exporter arguments and keep quotes
          - change handling allias/script arguments and keep quotes
          - check_os_version: add kernel version/arch/hostname
+         - fix timeout race condition when rebooting windows service
+         - fix checking for allowed arguments / nasty characters for web api requests
+         - fix checking for allowed arguments / nasty characters from external scripts (#158)
 
 0.32     Thu Mar 13 12:55:24 CET 2025
          - add alpine support
